--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="handlers\AmmoTypeHandler.cs" />
-    <Compile Include="handlers\ControlerHandler.cs" />
+    <Compile Include="handlers\ControllerHandler.cs" />
     <Compile Include="Cursor.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
     <Compile Include="GXPEngine\AddOns\SpriteBatch.cs" />
