--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -48,7 +48,9 @@
     <Compile Include="GXPEngine\AddOns\SpriteBatch.cs" />
     <Compile Include="GXPEngine\AddOns\TiledLoader.cs" />
     <Compile Include="handlers\EnemySpawnHandler.cs" />
+    <Compile Include="handlers\GrenadeHandler.cs" />
     <Compile Include="handlers\LevelHandler.cs" />
+    <Compile Include="handlers\PlayerHealthHandler.cs" />
     <Compile Include="MyGame.cs" />
     <Compile Include="GXPEngine\Core\Canvas.cs" />
     <Compile Include="GXPEngine\Game.cs" />
