--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="shootable\BossEnemy.cs" />
+    <Compile Include="shootable\enemies\BossEnemy.cs" />
     <Compile Include="handlers\AmmoTypeHandler.cs" />
     <Compile Include="handlers\ControllerHandler.cs" />
     <Compile Include="Cursor.cs" />
